force-app/main/default/objects/Case_Escalation_Event__e/Case_Escalation_Event__e.object-meta.xml
<CustomObject>
    <label>Case Escalation Event</label>
    <pluralLabel>Case Escalation Events</pluralLabel>
    <description>Published when a Case transitions to Status=Escalated and Priority=High. The subscriber trigger runs as Automated Process user, giving it full access to setup objects like OrgWideEmailAddress that are blocked for Experience Cloud users.</description>
</CustomObject>