force-app/main/default/objects/Case_Escalation_Event__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Salesforce record Id of the escalated Case.</description>
</CustomField>