force-app/main/default/objects/Case_Escalation_Event__e/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <type>Text</type>
    <length>20</length>
    <description>Human-readable case number captured at publish time to avoid a re-query in the subscriber.</description>
</CustomField>