force-app/main/default/objects/Case_Escalation_Event__e/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Text</type>
    <length>255</length>
    <description>Case subject captured at publish time for the email body.</description>
</CustomField>